examples/test/testpolicy12275.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12275
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key40: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value15
          key20: value37
      podSelector:
        matchLabels:
          key8: value34
          key41: value12
          key20: value25
